--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <base href="/">
         <meta name="viewport" content="width=device-width">
-        <title>Alurapic</title>
+        <title>Pics</title>
         <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/efeitos.css">
